src/objects/BatchError__c.object
<CustomObject>
    <description>Error saved from each batch in MassCaseCreationBatch</description>
    <fields>
        <fullName>AccountInfo__c</fullName>
        <description>Contains Account name and ID related to the failed case</description>
        <label>AccountInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchID__c</fullName>
        <description>Batch ID related to this Batch error entry</description>
        <label>BatchID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMsg__c</fullName>
        <description>Error message related to this batch entry</description>
        <label>ErrorMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BatchError</label>
    <nameField>
        <label>BatchError Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BatchErrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>